# torch-frft

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini  train.ipynb
.github/: FUNDING.yml
.github/workflows/: build.yml  bump.yml  python-publish.yml  tox.yml
tests/: test_dfrft.py  test_dfrft_ndim.py  test_dfrt.py  test_fracf_multi.py  test_fracf_torch.py  test_fracfn.py  test_frft_multi.py  test_frft_ndim.py  test_frft_torch.py
tests/data/: dFRT_N128_a125.mat  dFRT_N256_a075.mat  ones3d_a065.mat  rand3d_a090.mat
torch_frft/: dfrft.py  dfrft_module.py  frft.py  frft_module.py  layer.py
trainable_frft/: dfrt.py  fracf_torch.py  layer.py
