[tool.poetry]
name = "torch-frft"
version = "0.5.0"
description = ""
authors = ["Tuna Alikaşifoğlu <tunakasif@gmail.com>"]
readme = "README.md"
packages = [{ include = "torch_frft" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
torch = "2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pep8-naming = "^0.13.3"
pyupgrade = "^3.4.0"
pylint = "^2.17.4"
pre-commit = "^3.3.2"
tox = "^4.6.0"
commitizen = "^3.2.2"
ipykernel = "^6.23.1"
ipython = "^8.14.0"
ruff = "^0.0.284"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.5"
pip-audit = "^2.5.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.5.0"
version_files = [
    "pyproject.toml:^version",
    "torch_frft/__init__.py:__version__",
    "CITATION.cff:^version",
]
major_version_zero = true
update_changelog_on_bump = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
